--- a/GAP-FrontEnd/src/app/Menus/sidebar/sidebar.component.html
+++ b/GAP-FrontEnd/src/app/Menus/sidebar/sidebar.component.html
@@ -1,5 +1,4 @@
-<div [hidden]="!globalVariableService.isLogged"
-     class="sidebar-wrapper" data-simplebar="true">
+<div [hidden]="!globalVariableService.isLogged" class="sidebar-wrapper" data-simplebar="true">
   <div class="sidebar-header">
     <div class="">
       <img src="assets/images/RB-LOGO1.png" class="logo-icon-2" alt="" />
@@ -93,7 +92,7 @@
       </ul>
     </li>
     <li>
-      <a routerLink="/Utilisateurs">
+      <a routerLink="/Calcul">
         <div class="parent-icon icon-color-8"><i class="lni lni-calculator"></i>
         </div>
         <div class="menu-title">Calculs</div>
